--- a/src/1_dataclean_mc_fall.Rmd
+++ b/src/1_dataclean_mc_fall.Rmd
@@ -21,10 +21,8 @@ library(plotly)
 library(ggthemes)
 library(RColorBrewer)
 library(htmltools)
+library(chron)
 
-
-# Number of experiments
-exp=8
 ```
 
 ##ENSURE SPREADSHEET IS FILTERED FIRST RUN_DATE (oldest to newest) then by DATETIME (oldest to newest)
@@ -106,8 +104,6 @@ chem_qc= data.frame(var = c('Cl','NO3','PO4','DOC'), MaxDL=c(1.7, 5, 7.5, 50), M
 
 ```{r, include=FALSE}
 ### Create long dataset
-
-
 chem_mc<-chem_grab_mc %>%
   select(sample:SO4)%>%
   gather(var, value, Na:SO4) %>%
@@ -134,12 +130,16 @@ chem_long_mc<-
   left_join(chem_flag)%>%
   rbind(chem_mc_cond)%>%
   mutate(id = rownames(.))
+
+cond_cl_long<-chem_long_mc%>%
+  filter(sample_type=="MC")%>%
+  filter(site!="50")%>%
+  filter(var=="Cond_Cl")%>%
+  mutate(date=date(datetime))
 ```
 
 
 ```{r, include = FALSE}
-
- 
 ### Define functions to graph data and set color scheme
 plotChem <- function (df, choose_param=c( 'Cl', 'NO3', 'PO4', 'DOC', 'Cond_Cl'), loc ='350', w = 1200, h =    1000) {
   date_title<-date(df$datetime[[1]])
@@ -183,6 +183,7 @@ qual_col_pals = brewer.pal.info[brewer.pal.info$category == 'qual',]
 col_vector = unlist(mapply(brewer.pal, qual_col_pals$maxcolors, rownames(qual_col_pals)))
 
 ```
+
 ## 350
 ### Raw Visualize
 ```{r, echo = FALSE}
@@ -196,11 +197,6 @@ chem_grab_nest_mc<-chem_long_mc%>%
   nest()
 
 mc<-map(chem_grab_nest_mc$data, loc='350', plotChem)
-
-# Doesn't work?!
-# for (i in 1:exp) {
-# print(bg[[i]])
-# }
 
 mc[[1]]
 mc[[2]]
@@ -216,13 +212,10 @@ mc[[8]]
 #### Create good_id vector for site 350
 ```{r}
 # Points to background correct
-good_id_mc3_bg<-c(68:75, 925:932, 236:238, 1093:1095, 265:267, 1122:1123, 1979, 1980, 1982, 280:283, 1137:1140, 1994:1997, 665:668, 1522:1527, 145:149, 1002:1006, 694, 695, 697, 795, 1551, 1552, 1554, 163, 164, 166, 167, 1020, 1021, 1022, 1877, 1878, 2408, 2409, 2411 )#350
+good_id_mc3_bg<-c(68:75, 925:932, 236:238, 2818:2820, 1093:1095, 265:268, 1122:1123, 1979:1982, 280:283, 2884:2887, 1137:1140, 1994:1997, 665:670, 1522:1527, 145:149, 2721:2725, 1002:1006, 694, 695, 697, 795, 1551, 1552, 1554, 1652, 163, 164, 166, 167, 2739:2741, 2743, 1020:1024, 1877:1879, 1881, 2408, 2409, 2411, 2509 )#350
 
-# 85:91, 899:906, 235:237, 1049:1051, 265:268, 1079:1080, 1893, 1894, 1896, 280:283, 1908:1911, 667:670,672, 149:153, 963:967, 706:708, 1520:1522, 2334:2336, 167, 168, 170, 171, 981:984, 1795, 1796
+good_id_mc3_fall<-c(291:293, 295, 297, 299, 302, 305, 307, 933:936, 1061:1065, 351, 352, 354, 356, 358, 360, 362, 429, 366, 368, 370, 2821:2832, 1096:1107, 373:379, 381, 382, 390, 391, 1126:1136, 1983:1993, 392, 394, 395, 397, 399, 401:403, 349, 350, 2889, 2891:2895, 2967, 2970, 2971, 2974, 2975, 1141:1146, 1201, 1203, 1204, 1206, 1207, 1998:2003, 2058, 2060, 2061, 2063, 2064, 671:681, 1641:1651, 627:635, 438, 624, 625, 626,629:635, 2726:2738, 1007:1019, 700, 701, 703, 704, 711,714, 717:724, 638:641, 663, 664, 810:814, 2747,2766:2775, 1028, 1047:1056, 1885, 1904:1913, 1653:1666, 2510:2523, 2538) #350
 
-good_id_mc3_fall<-c(291:293, 295, 297, 299, 302, 305, 307, 933:935, 1061:1063, 1065, 351, 352, 354, 356, 358, 360, 362, 429, 366, 368, 370, 1096:1107, 373, 375:379, 381, 382, 390, 391, 1126, 1128, 1129, 1983:1990, 392, 394, 395, 397, 399, 401:403, 1141, 1146, 1998:2003, 2058, 2060, 2061, 2063, 2064, 672, 674:681, 1641:1650, 627:635, 438, 424, 625, 626, 1007:1014, 1016:1019, 715, 718:724, 638:641, 663, 664, 810, 811, 812, 813, 814, 1028, 1047, 1048:1056, 1880:1881, 1885, 1904:1913, 1652:1665, 2509:2523, 2538) #350
-
-# 301:309, 907:909, 1014:1016, 320, 351:360, 430, 1052:1063, 373, 375:379, 381:384, 1085:1086, 1898:1904, 385:387, 389:393, 1912:1917, 1950:1954, 674, 676:683, 627:632, 634:636, 972:975, 977:980, 716, 718, 719, 721, 723, 724, 638:643, 988:997, 1797, 1799:1811
 ```
 
 ## 450
@@ -239,11 +232,6 @@ chem_grab_nest_mc<-chem_long_mc%>%
 
 mc4<-map(chem_grab_nest_mc$data, loc='450', plotChem)
 
-# Doesn't work?!
-# for (i in 1:exp) {
-# print(bg[[i]])
-# }
-
 mc4[[1]]
 mc4[[2]]
 mc4[[3]]
@@ -258,17 +246,14 @@ mc4[[8]]
 #### Create good_id vector for site 450
 ```{r, echo = FALSE}
 # Points to background correct
-good_id_mc_bg<- c(good_id_mc3_bg, 200:203, 222:224, 1057, 1058, 1060, 1079:1081, 235, 251, 252, 1092, 1108, 1109, 322:324, 1179:1181, 2036:2038, 337:340, 1194, 1195, 1197, 2197:2200, 642:644, 1499:1501, 174:177, 1031:1034, 520:523,1377:1381, 209, 211, 212, 1066, 1068, 1069, 2301:2305, 1923:1926) #450
+good_id_mc_bg<- c(good_id_mc3_bg, 200:203, 222:224, 1057, 1058, 1060, 1079:1081, 235, 251, 252, 2817, 2834, 2836, 1092, 1108, 1109, 322:324, 1179:1181, 2036:2038, 337:340, 3147, 3149, 3151, 3153, 1194:1197, 2197:2200, 642:644, 1499:1501, 174:177, 2750:2753, 1031:1034, 520:524, 1377:1381, 2234:2238, 209, 211, 212, 1066, 1068, 1069, 2790, 2792, 2793, 1923:1926) #450
 
-# 205:208, 222:224, 1019,1020,1036:1038, 250:252, 1064:1066, 327:329, 1141,1143, 1955:1957, 483:486, 1156,1157, 1159, 2111:2114, 653:655, 184:187, 998:1001, 520:524, 1334:1338, 209, 211, 212, 1023:1026, 1837:1840
-
-good_id_mc_fall<-c(good_id_mc3_fall, 818, 820, 821, 300, 301, 304, 306, 308, 309, 1082:1091, 353, 355, 357, 359, 361, 363, 364, 365, 367, 369, 371, 372, 1110:1121, 386, 387, 388, 389, 335, 336, 1182, 1183, 1187:1193, 2039:2050, 393, 415, 404, 405:409, 1198, 1345:1349, 1352, 2201, 2202:2210, 645:653,1693:1701, 654, 823, 656:662, 1035:1043, 593, 596:600, 602, 1384, 1385, 1390:1396, 2306:2313, 2315, 2316, 827:835, 1070:1078, 2541:2549) #450
-
-# 310:313, 315:319, 1039:1048, 361:372, 1067:1069, 1381:1389, 397:400, 1145, 1149:1155, 1959:1969, 403:409, 1160:1161, 1162, 1304:1308, 1310, 1598, 2115, 2116, 655:664, 644:646, 648:652, 1003:1007, 1010, 1341:1349
+good_id_mc_fall<-c(good_id_mc3_fall, 818, 820, 821, 300, 301, 303, 304, 306, 308, 309, 1082:1091, 353, 355, 357, 359, 361, 363, 364, 365, 367, 369, 371, 372, 2838, 2840, 2842, 2844, 2846, 2848, 2850, 2852, 2854, 2856, 2858, 2860, 1110:1121, 577, 383:389, 335, 336, 1182:1193, 2039:2050, 393, 398, 400, 404, 405:410, 3155, 3157, 3159, 3161, 3163, 3165, 3167,  3169, 3171, 3173, 3536, 1198:1200, 1202, 1205, 1349: 1353, 1711, 2201, 2202:2210, 2568, 645:653, 1693:1701, 822, 823, 656:662, 2754:2762, 1035:1043, 593, 592:600, 602, 1382:1385, 1390:1396, 2239:2242, 2247:2250, 2252, 2253, 827:835, 3518:3526, 1070:1078, 2541:2549) #450
 
 good_id_mc<- c(good_id_mc_bg, good_id_mc_fall)
 ```
 
+## Create dataset with selected points
 ```{r, echo = FALSE}
 #create dataset selected background points
 chem_clean_mc_bg <- chem_long_mc%>%
@@ -279,6 +264,8 @@ chem_clean_mc_bg <- chem_long_mc%>%
 chem_clean_long_mc <- chem_long_mc%>%
   filter(id %in% good_id_mc)%>%
   mutate(date=date(datetime))
+
+chem_clean_graph_mc<-  rbind(chem_clean_long_mc, cond_cl_long)
 
 #double check that Max Detection Limit is vaild
 chem_clean_long_flagged<-chem_clean_long_mc%>%
@@ -291,7 +278,7 @@ count(chem_clean_long_flagged)
 ### Visualize Selected Data
 ```{r, echo=FALSE}
 # Double check everything
-chem_clean_nest_mc<-chem_clean_long_mc%>%
+chem_clean_nest_mc<-chem_clean_graph_mc%>%
   filter(date %in% injdates)%>%
   arrange(date)%>%
   group_by(date)%>%
@@ -362,72 +349,112 @@ background_means_mc
 write_csv(background_means_mc,"data/in/background_means_mc.csv" )
 ```
 
-### Background correct falling limb sample concentrations.
+## Clean up data and write csv for final graphs
+```{r}
+
+ chem_final<- chem_clean_graph_mc%>%
+   mutate(datetime_MDT= as.POSIXct(datetime,tz='MST7MDT'))%>%
+   mutate(raw_value_ppm=value)
+
+
+ chem_final_order<- chem_final%>%
+   select("sample", "site", "date", "datetime", "compartment", "sample_type","rundate", "id", "df","var", "MaxDL_flag", "MDL_flag",  "raw_value_ppm")
+ 
+ 
+corr_times<-times(format(chem_final$datetime, "%H:%M:%S"))
+chem_final_form<-cbind(chem_final, corr_times)
+
+
+write.csv(chem_final_order,"data/out/chem_como.csv", row.names=FALSE)
+```
+
+
+### Background correct falling limb sample concentrations. - NOT ANYMORE
 
 ```{r, echo = FALSE, message=FALSE, warning = FALSE}
-#create dataset with bg_mean concentrations
-chem_merge<- chem_clean_long_mc%>%
-  left_join(.,chem_mean_mc_bg)
-
-# Subtract bg from raw value
-library(chron)
-chem_corr<- chem_merge%>%
-  mutate(value_corr=value-bg_mean)
-
-corr_times<-times(format(chem_corr$datetime, "%H:%M:%S"))
-corr_final<-cbind(chem_corr, corr_times)
-
-
-write_csv(corr_final,"data/out/chem_bg_corrected.csv")
-
-#Create function to graph
-plotChem_corr <- function (df, loc, value = value_corr) {
-  date_title<-date(df$datetime[[1]])
-      ggplot(dplyr::filter(df, site==loc), aes(datetime, value_corr),group = 1) +
-      geom_point(shape = 16, size = 3) +
-      geom_line() +
-      theme_few() +
-      facet_wrap( ~ var, ncol = 1, scale = 'free_y')+
-      labs(title = date_title)
-}
-
-chem_corr_nest<-chem_corr%>%
-    # filter(date %in% injdates)%>%
-  arrange(date)%>%
-  group_by(date)%>%
-  nest()
+# #create dataset with bg_mean concentrations
+# chem_merge<- chem_clean_long_mc%>%
+#   left_join(.,chem_mean_mc_bg)
+# 
+# # Subtract bg from raw value
+# library(chron)
+# chem_corr<- chem_merge%>%
+#   mutate(value_corr=value-bg_mean)%>%
+#   mutate(datetime_MDT= as.POSIXct(datetime,tz='MST7MDT'))%>%
+#   mutate(raw_value_ppm=value)%>%
+#   mutate(bg_mean_ppm=bg_mean)%>%  
+#   mutate(value_corr_ppm=value_corr)
+# 
+# chem_corr_order<- chem_corr%>%
+#   select("sample", "site", "date", "datetime", "compartment", "sample_type","rundate", "id", "df","var", "MaxDL_flag", "MDL_flag",  "raw_value_ppm", "bg_mean_ppm","value_corr_ppm")
+# 
+# # corr_times<-times(format(chem_corr$datetime, "%H:%M:%S"))
+# # corr_final<-cbind(chem_corr, corr_times)
+# 
+# 
+# write.csv(chem_corr_order,"data/out/chem_bg_corrected.csv", row.names=FALSE)
+# 
+# #Create function to graph
+# plotChem_corr <- function (df, loc, value = value_corr) {
+#   date_title<-date(df$datetime[[1]])
+#       ggplot(dplyr::filter(df, site==loc), aes(datetime, value_corr),group = 1) +
+#       geom_point(shape = 16, size = 3) +
+#       geom_line() +
+#       theme_few() +
+#       facet_wrap( ~ var, ncol = 1, scale = 'free_y')+
+#       labs(title = date_title)
+# }
+# 
+# chem_corr_nest<-chem_corr%>%
+#     # filter(date %in% injdates)%>%
+#   arrange(date)%>%
+#   group_by(date)%>%
+#   nest()
 ```
 
 ## Visually inspect background corrected falling limb sample concentrations for each day.
+```{r}
+# #Create function to graph
+# plotChem_corr <- function (df, loc, value = value_corr) {
+#   date_title<-date(df$datetime[[1]])
+#   loc_title<-paste(loc, date_title, sep=": ")
+#       ggplot(dplyr::filter(df, site==loc), aes(datetime, value),group = 1) +
+#       geom_point(shape = 16, size = 3) +
+#       geom_line() +
+#       theme_few() +
+#       facet_wrap( ~ var, ncol = 1, scale = 'free_y')+
+#       labs(title = loc_title)
+#       }
+```
 
 ### Graph site 350
 ```{r, echo = FALSE}
-corr3<-map(chem_corr_nest$data, plotChem_corr, loc='350', value =chem_corr_nest$data$value_corr )
-
-corr3[[1]]
-corr3[[2]]
-corr3[[3]]
-corr3[[4]]
-corr3[[5]]
-corr3[[6]]
-corr3[[7]]
-corr3[[8]]
+# corr3<-map(chem_clean_nest_mc$data, plotChem_corr, loc='350', value=chem_clean_nest_mc$data$value )
+# 
+# corr3[[1]]
+# corr3[[2]]
+# corr3[[3]]
+# corr3[[4]]
+# corr3[[5]]
+# corr3[[6]]
+# corr3[[7]]
+# corr3[[8]]
 
 
 ```
 
 ### Graph Site 450
 ```{r, echo = FALSE}
-corr4<-map(chem_corr_nest$data, plotChem_corr, loc='450', value =chem_corr_nest$data$value_corr )
-
-corr4[[1]]
-corr4[[2]]
-corr4[[3]]
-corr4[[4]]
-corr4[[5]]
-corr4[[6]]
-corr4[[7]]
-corr4[[8]]
+# corr4<-map(chem_corr_nest$data, plotChem_corr, loc='450', value =chem_corr_nest$data$value_corr )
+# 
+# corr4[[1]]
+# corr4[[2]]
+# corr4[[3]]
+# corr4[[4]]
+# corr4[[5]]
+# corr4[[6]]
+# corr4[[7]]
+# corr4[[8]]
 ```
 
 
